# MobilityDB

./: CMakeLists.txt
.github/workflows/: ubuntu.yml
cmake/: FindPostGIS.cmake  FindProj.cmake
npoint/test/scripts/: test.cmake
point/test/scripts/: test.cmake
sql/: CMakeLists.txt
sql/general/: 01_period.in.sql  CMakeLists.txt
src/: CMakeLists.txt
src/general/: CMakeLists.txt
test/scripts/: test.cmake  test.sh
